// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Characters renders CharactersSection component 1`] = `
<div>
  <div
    class="container m-auto"
  >
    <div
      class="infinite-scroll-component__outerdiv"
    >
      <div
        class="infinite-scroll-component "
        style="height: auto; overflow: auto;"
      >
        <ul
          class="characters__list"
          data-testid="characters-list"
        >
          <li
            class="characters__item"
            role="list-item"
          >
            <a
              class="characters__link"
              href="/characters/1"
            >
              <div
                class="characters__thumb"
              >
                <img
                  alt="Rick Sanchez"
                  class="characters__img"
                  data-nimg="1"
                  decoding="async"
                  height="210"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F1.jpeg&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F1.jpeg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F1.jpeg&w=640&q=75 2x"
                  style="color: transparent;"
                  width="210"
                />
              </div>
              <div
                class="characters__text-box"
              >
                <p
                  class="characters__text"
                >
                  Rick Sanchez
                </p>
              </div>
            </a>
          </li>
          <li
            class="characters__item"
            role="list-item"
          >
            <a
              class="characters__link"
              href="/characters/2"
            >
              <div
                class="characters__thumb"
              >
                <img
                  alt="Morty Smith"
                  class="characters__img"
                  data-nimg="1"
                  decoding="async"
                  height="210"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F2.jpeg&w=640&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F2.jpeg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F2.jpeg&w=640&q=75 2x"
                  style="color: transparent;"
                  width="210"
                />
              </div>
              <div
                class="characters__text-box"
              >
                <p
                  class="characters__text"
                >
                  Morty Smith
                </p>
              </div>
            </a>
          </li>
        </ul>
        <div
          class="preloader__box"
        >
          <div
            aria-busy="true"
            aria-label="ball-triangle-loading"
            data-testid="ball-triangle-loading"
            role="status"
            style="display: flex;"
          >
            <svg
              data-testid="ball-triangle-svg"
              height="100"
              stroke="yellow"
              viewBox="0 0 57 57"
              width="90"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <g
                  stroke-width="2"
                  transform="translate(1 1)"
                >
                  <circle
                    cx="5"
                    cy="50"
                    r="5"
                  >
                    <animate
                      attributeName="cy"
                      begin="0s"
                      calcMode="linear"
                      dur="2.2s"
                      repeatCount="indefinite"
                      values="50;5;50;50"
                    />
                    <animate
                      attributeName="cx"
                      begin="0s"
                      calcMode="linear"
                      dur="2.2s"
                      repeatCount="indefinite"
                      values="5;27;49;5"
                    />
                  </circle>
                  <circle
                    cx="27"
                    cy="5"
                    r="5"
                  >
                    <animate
                      attributeName="cy"
                      begin="0s"
                      calcMode="linear"
                      dur="2.2s"
                      from="5"
                      repeatCount="indefinite"
                      to="5"
                      values="5;50;50;5"
                    />
                    <animate
                      attributeName="cx"
                      begin="0s"
                      calcMode="linear"
                      dur="2.2s"
                      from="27"
                      repeatCount="indefinite"
                      to="27"
                      values="27;49;5;27"
                    />
                  </circle>
                  <circle
                    cx="49"
                    cy="50"
                    r="5"
                  >
                    <animate
                      attributeName="cy"
                      begin="0s"
                      calcMode="linear"
                      dur="2.2s"
                      repeatCount="indefinite"
                      values="50;50;5;50"
                    />
                    <animate
                      attributeName="cx"
                      begin="0s"
                      calcMode="linear"
                      dur="2.2s"
                      from="49"
                      repeatCount="indefinite"
                      to="49"
                      values="49;5;27;49"
                    />
                  </circle>
                </g>
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Characters should render a characters list and should have a length equal 2 1`] = `
<ul
  class="characters__list"
  data-testid="characters-list"
>
  <li
    class="characters__item"
    role="list-item"
  >
    <a
      class="characters__link"
      href="/characters/1"
    >
      <div
        class="characters__thumb"
      >
        <img
          alt="Rick Sanchez"
          class="characters__img"
          data-nimg="1"
          decoding="async"
          height="210"
          loading="lazy"
          src="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F1.jpeg&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F1.jpeg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F1.jpeg&w=640&q=75 2x"
          style="color: transparent;"
          width="210"
        />
      </div>
      <div
        class="characters__text-box"
      >
        <p
          class="characters__text"
        >
          Rick Sanchez
        </p>
      </div>
    </a>
  </li>
  <li
    class="characters__item"
    role="list-item"
  >
    <a
      class="characters__link"
      href="/characters/2"
    >
      <div
        class="characters__thumb"
      >
        <img
          alt="Morty Smith"
          class="characters__img"
          data-nimg="1"
          decoding="async"
          height="210"
          loading="lazy"
          src="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F2.jpeg&w=640&q=75"
          srcset="/_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F2.jpeg&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Frickandmortyapi.com%2Fapi%2Fcharacter%2Favatar%2F2.jpeg&w=640&q=75 2x"
          style="color: transparent;"
          width="210"
        />
      </div>
      <div
        class="characters__text-box"
      >
        <p
          class="characters__text"
        >
          Morty Smith
        </p>
      </div>
    </a>
  </li>
</ul>
`;
